<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.InicioActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/MargenPadrao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linerLayoutInicio1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/MargenPadrao"
                android:contentDescription="@string/imageviewInicioContenDescription"
                android:src="@drawable/comecar_header_img" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/MargenPadrao"
                android:gravity="center"
                android:text="@string/LoginTitulo"
                android:textSize="@dimen/TV_HeaderComecar"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/InputTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/MargenPadrao"
                android:ems="10"
                android:hint="@string/HintEmail"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/InputTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/MargenPadrao"
                android:ems="10"
                android:hint="@string/HintSenha"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/InputTextPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/MargenPadrao"
                android:ems="10"
                android:hint="@string/HintSenha"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/BTCadastroLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/MargenPadrao"
                android:text="@string/BT_Cadastrar" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00FFFFFF"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/TextLoginLinkPrefix"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/loginLinkPrefixo" />

                    <TextView
                        android:id="@+id/TextLoginLink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/MargenPadrao"
                        android:layout_marginLeft="@dimen/MargenPadrao"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/loginLink"
                        android:textColor="@color/DefaultPrimary" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>